[package]
name = "flops-test"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = {version = "0.19", features = []}
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"



[features]
default = ["wgpu", "ndarray"]

wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
cpu = ["burn/cpu"]
ndarray = ["burn/ndarray"]
vulkan = ["burn/vulkan"]